configs/clusters/production/01-stage/tekton-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.local.d20.fan
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
